# wk6-async-gateway

./: BMP280_IMPLEMENTATION.md  Cargo.toml  Makefile  NOTES.md  QUICKSTART.md  README.md  TODO.md  TROUBLESHOOTING.md  WORKSPACE_README.md  WORKSPACE_SETUP.md  build-n1.sh  build-n2.sh  run-gateway.sh
gateway-service/: Cargo.toml
gateway-service/src/: main.rs
node1-firmware/: Cargo.toml
node1-firmware/src/: main.rs
